--- a/title-bar.html
+++ b/title-bar.html
@@ -9,7 +9,7 @@
       }
       h2 {
         font-family: sans-serif;
-        color: yellowgreen;
+        color: rgb(0, 143, 197);
         display: inline-block;
       }
       a {
@@ -17,7 +17,7 @@
         font-size: 18px;
         text-decoration: none;
         float: right;
-        color: dodgerblue;
+        color: rgb(0, 143, 197);
         margin: 1em;
       }
     </style>
@@ -25,7 +25,7 @@
     <h2>[[ title ]]</h2>
 
     <template is="dom-if" if="[[ helpUrl ]]">
-      <a href="[[ helpUrl ]]">?</a>
+      <a href="[[ helpUrl ]]">(?)</a>
     </template>
 
   </template>
